--- a/react-app/src/components/Home.css
+++ b/react-app/src/components/Home.css
@@ -31,3 +31,16 @@
     color: #002f34;
 
 }
+
+.clear-btn {
+    height: 24px;
+    background-color: #002f34;
+    color: #fff;
+    border-radius: 4px;
+    font-size: 12px;
+    outline: none;
+    border: none;
+    padding: 0px 15px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
